--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>JAVASCRIPT PRUEBA</title>
     </head>
     <Body>
-Te amo Sharon, Derick sos increible
+Gracias por la clase de hoy teacher 
     </Body>
     </html>
