--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <Body>
 Gracias por la clase de hoy teacher 
+<script>
+    let nombre = 
+    prompt("Introduzca su nombre");
+    document.write(nombre);
+</script>
     </Body>
     </html>
