--- a/scripts/practica1.html
+++ b/scripts/practica1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>TIPOS DE SCRIPT</title>
+        <title>TIPOS DE SCRIPT.</title>
     </head>
     <body>
        <h1>TIPOS DE DATOS</h1>
