--- a/scripts/practica1.html
+++ b/scripts/practica1.html
@@ -8,5 +8,11 @@
        <h1>TIPOS DE DATOS</h1>
        <hr>
        <h2>SCRIPT INTERNO</h2>
+       <script>
+        let name, lastname;
+        name = prompt("Write your beautiful name: ");
+        lastname = prompt("Write your beautiful lastname: ");
+        document.write("Bienvenid@", name, " ", lastname);
+       </script>
     </body>
 </html>
