--- a/scripts/practica1.html
+++ b/scripts/practica1.html
@@ -12,7 +12,7 @@
         let name, lastname;
         name = prompt("Write your beautiful name: ");
         lastname = prompt("Write your beautiful lastname: ");
-        document.write("Bienvenid@", name, " ", lastname);
+        document.write("Bienvenid@"," ", name, " ", lastname);
        </script>
     </body>
 </html>
