--- a/scripts/practica2.html
+++ b/scripts/practica2.html
@@ -11,10 +11,10 @@
         <script>
             var nombre, birthday, edad,mascotas;
             nombre = prompt("Hola, linda dime tu nombre porfis:");
-            birthday = prompt("¿Cuando cumples bonita?:");
+            birthday = prompt("¿Cuando cumples bonita?: <br>")
             edad = prompt("Tu edad linda?");
             mascotas = prompt("Cuantas mascotas tienes?");
-            document.write("Hola, soy:",nombre," ", "Cumplo el: ", birthday," ", "tengo: ",edad," ", "tengo: ", mascotas);
+            document.write("Hola, soy:",nombre, "Cumplo el: ", birthday," ", "tengo: ",edad," ", "tengo: ", mascotas);
 </script>
     </body>
 </html>
