--- a/scripts/practica2.html
+++ b/scripts/practica2.html
@@ -10,9 +10,9 @@
         <h2>KATHY</h2>
         <script>
             var nombre, birthday, edad,mascotas;
-            nombre = prompt("Hola, linda dime tu nombre porfis:");
-            birthday = prompt("¿Cuando cumples bonita?: <br>")
-            edad = prompt("Tu edad linda?");
+            nombre = prompt("Hola, linda dime tu nombre porfis: "/n);
+            birthday = prompt("¿Cuando cumples bonita?: "/n)
+            edad = prompt("Tu edad linda?"/n);
             mascotas = prompt("Cuantas mascotas tienes?");
             document.write("Hola, soy:",nombre, "Cumplo el: ", birthday," ", "tengo: ",edad," ", "tengo: ", mascotas);
 </script>
