--- a/scripts/practica2.html
+++ b/scripts/practica2.html
@@ -10,10 +10,10 @@
         <h2>KATHY</h2>
         <script>
             var nombre, birthday, edad,mascotas;
-            nombre = prompt("Hola, linda dime tu nombre porfis: "/n);
-            birthday = prompt("¿Cuando cumples bonita?: "/n)
-            edad = prompt("Tu edad linda?"/n);
-            mascotas = prompt("Cuantas mascotas tienes?");
+            nombre = prompt("Hola, linda dime tu nombre porfis: ");  
+            birthday = prompt("¿Cuando cumples bonita?: " );
+             edad = prompt( "¿Cuantos años tienes? " ); 
+            mascotas = prompt("¿Cuántas mascotas tienes?");
             document.write("Hola, soy:",nombre, "Cumplo el: ", birthday," ", "tengo: ",edad," ", "tengo: ", mascotas);
 </script>
     </body>
