--- a/js/index.html
+++ b/js/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="script1.js"></script>
         <title>External Script</title>
     </head>
+    <body>
+        <script src="script1.js"></script>
+    </body>
 </html>
