--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-
-    <head>
-    </head>
-
-    <body>
-        <script src="script1.js"></script>
-        
-       </script>
-    </body>
-
+<body>
+<img src="https://i.ibb.co/7RQJG4t/IMG-20230923-WA0016.jpg" alt="IMG-20230923-WA0016">
+<h1>YUDA</h1>
+<style>
+     h1{
+         text-align: center; 
+         background-color: lavender;
+     } 
+     body{
+     background-position: center;
+     background-repeat: no-repeat;
+     height: 100px;
+     text-align: center;
+padding-top: 13%; } 
+</style>
+<script> </script>
+</body>
 </html>
